--- a/index.html
+++ b/index.html
@@ -27,7 +27,10 @@
       content="viewport-fit=cover, width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0"
       name="viewport"
     />
-    <link href="/favicon.ico" rel="icon" />
+    <link
+      href="https://enigmacamp.com/icons/enigma-camp-blue-logo.svg"
+      rel="icon"
+    />
   </head>
   <body>
     <div id="root"></div>
