--- a/index.html
+++ b/index.html
@@ -1,39 +1,32 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link
-      rel="icon"
-      type="image/svg+xml"
-      href="https://enigmacamp.com/icons/enigma-camp-blue-logo.svg"
-    />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Enigma Upskilling Platform</title>
-    <meta
-      key="title"
-      content="Enigma Upskilling Platform"
-      property="og:title"
-    />
-    <meta
-      content="Make beautiful platform regardless of your programming experience."
-      property="og:description"
-    />
-    <meta
-      content="Make beautiful platform regardless of your programming experience."
-      name="description"
-    />
-    <meta
-      key="viewport"
-      content="viewport-fit=cover, width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0"
-      name="viewport"
-    />
-    <link
-      href="https://enigmacamp.com/icons/enigma-camp-blue-logo.svg"
-      rel="icon"
-    />
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
+	<head>
+		<meta charset="UTF-8" />
+		<link
+			rel="icon"
+			type="image/svg+xml"
+			href="https://enigmacamp.com/icons/enigma-camp-blue-logo.svg"
+		/>
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>Enigma Upskilling Platform</title>
+		<meta key="title" content="Enigma Upskilling Platform" property="og:title" />
+		<meta
+			content="Make beautiful platform regardless of your programming experience."
+			property="og:description"
+		/>
+		<meta
+			content="Make beautiful platform regardless of your programming experience."
+			name="description"
+		/>
+		<meta
+			key="viewport"
+			content="viewport-fit=cover, width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0"
+			name="viewport"
+		/>
+		<link href="https://enigmacamp.com/icons/enigma-camp-blue-logo.svg" rel="icon" />
+	</head>
+	<body>
+		<div id="root"></div>
+		<script type="module" src="/src/main.tsx"></script>
+	</body>
 </html>
